# garbanzo

./: README.md  pyproject.toml
config/: config.json
garbanzo/: config.py  server.py  utils.py
garbanzo/functions/: tcp.py
garbanzo/objects/: service.py  status.py
www/: index.html  main.js  style.css
www/static/: main.js
