[tool.poetry]
name = "garbanzo"
version = "0.1.0"
description = "An universal healthchecker"
authors = ["John Toniutti <john.toniutti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.105.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
