[tool.poetry]
name = "garbanzo"
version = "0.1.0"
description = "An universal healthchecker"
authors = ["John Toniutti <john.toniutti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.105.0"}
orjson = "^3.9.10"
anyio = "^3.7"
ipaddress = "^1.0.23"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.http.dependencies]
httpx = {extras = ["brotli", "http2"], version = "^0.25.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
